syntax = "proto3";

option go_package = "INServer/src/proto/msg";

import "command.proto";
import "data.role.proto";

message SessionCert {
    string UUID = 1;
    string Key = 2;
}

message ConnectGateReq {
    SessionCert SessionCert = 1;
}

message ConnectGateResp {
    bool Success = 1;
}

message RoleEnterReq {
    string RoleUUID = 1;
}

message RoleEnterResp {
    bool Success = 1;
    int32 MapID = 2;
    Role Role = 3;
}

message ClientToGate {
    CMD Command = 1;
    uint64 Sequence = 2;
    bytes Request = 3;
    bytes Notify = 4;
}

message GateToClient {
    CMD Command = 1;
    uint64 Sequence = 2;
    bytes Buffer = 3;
}